# erpc

./: build_all.sh
cmake/: CMakeLists.txt
erpc_c/infra/: erpc_basic_codec.h
erpc_c/setup/: erpc_setup_rpmsg_openamp.cpp  erpc_transport_setup.h
erpc_c/transports/: erpc_rpmsg_openamp_transport.cpp  erpc_rpmsg_openamp_transport.h
ext_lib/metal/: io.h  irq.h  list.h
ext_lib/metal/system/zephyr/: assert.h
ext_lib/openamp/: hil.h  remoteproc.h  rpmsg.h  rpmsg_core.h
service/: erpc_matrix_multiply.erpc  erpc_matrix_multiply.h  erpc_psa_api.erpc  erpc_psa_api.h  erpc_psa_api_client.cpp  erpc_psa_api_server.cpp  erpc_psa_api_server.h
